# eb_bars

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  svg.rs
src/svg/: tag.rs
tests/: plots.rs
