[package]
name = "eb_bars"
version = "0.1.0"
edition = "2021"

description = "Tiny library for creating histograms or bar charts"
readme = "README.md"

authors = ["Emil Bratt <emilbratt@gmail.com>"]

repository = "https://github.com/emilbratt/eb_bars"

keywords = ["barplot", "barchart", "histogram", "plot", "plotting"]

license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
rand = "0.9.0"