[package]
name = "eb_bars"
version = "0.4.3"
edition = "2021"

description = "Tiny plot library for creating barcharts and histograms"
readme = "README.md"

authors = ["Emil Bratt <emilbratt@gmail.com>"]

repository = "https://github.com/emilbratt/eb_bars"

keywords = ["barplot", "barchart", "histogram", "plot", "plotting"]

license = "MIT/Apache-2.0"

[dependencies]

[dev-dependencies]
rand = "0.9.0"
toml = "0.8.20"
